<resources>
    <string name="app_name">AxAtb</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="age">Idade</string>
    <string name="weight"> Peso</string>
    <string name="type_surgery">Tipo de cirurgia</string>
    <string name="allergies">Alergias</string>
    <string name="APENDICITE_NAO_PERFURADA">Apendicite não perfurada</string>
    <string name="CABECA_PESCOCO">Cabeça e Pescoço</string>
    <string name="CARDIACA">Cardiáca</string>
    <string name="CESARIA">Cesária</string>
    <string name="CISTOCOPIA">Cistoscopia</string>
    <string name="COLORRETAL">Colorretal</string>
    <string name="GASTROINTESTINAL_ALTO">Gastrointestinal Alto (Esôfago, estômago e duodeno)</string>
    <string name="GENITO_URINARIO_ABERTO">Genito-urinário aberto</string>
    <string name="GINECOLOGICA">Ginecológica</string>
    <string name="NEUROLOGICA">Neurológica</string>
    <string name="ORTOPEDICA">Ortopédica</string>
    <string name="PLASTICA">Plástica</string>
    <string name="TORACICA">Torácica</string>
    <string name="TRAUMA_ABERTO">Trauma aberto (fraturas expostas)</string>
    <string name="VASCULAR">Vascular</string>
    <string name="allergy_cephalosporins">Cefalosporinas</string>
    <string name="antibiotico">Antibiótico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mrsa">MRSA</string>
    <string name="msg_mrsa">Risco de Staphylococcus aureus resistente à oxacilina ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="aviso">Aviso</string>
    <string name="msg_cardiaca_result">Considerar o uso de Cefuxorima (1,5g em adultos, 50         mg/kg em crianças) profilática, se risco de pneumonia no pós-operatório</string>
    <string name="ok">OK</string>
    <string name="msg_cesaria_result">Evidências demonstram que a profilaxia antes da incisão não causa danos ao feto e é superior à realizada pós clampeamento do cordão umbilical</string>
    <string name="action_share">Compartilhar</string>
    <string name="enviar_para">Enviar para...</string>
    <string name="action_news">News</string>
    <string name="action_notifications">Comunicados</string>
</resources>
