<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
<android.support.v7.widget.CardView
    android:id="@+id/antibiotico_result_fragment"
    android:background="@color/cardview_light_background"
    tools:context="br.com.anestech.axatb_droid.fragments.AntibioticoResultFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/txt_idade_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:text="@string/age"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/txt_peso_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/weight"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txt_idade_paciente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toEndOf="@+id/txt_idade_paciente"
            app:layout_constraintTop_toTopOf="@+id/txt_idade_paciente"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/edt_idade_paciente"
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_idade_paciente"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edt_peso_paciente"
            android:layout_width="122dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_idade_paciente"
            app:layout_constraintTop_toBottomOf="@+id/txt_idade_paciente"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/txt_tipo_cirurgia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/type_surgery"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_idade_paciente"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinner_type_surgery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_tipo_cirurgia"
            app:layout_constraintVertical_bias="0.00999999" />

        <TextView
            android:id="@+id/txt_alergias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/allergies"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type_surgery"
            app:layout_constraintVertical_bias="0.019" />


        <CheckBox
            android:id="@+id/ckb_allergy_cefalosporinas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:text="@string/allergy_cephalosporins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_alergias"
            app:layout_constraintVertical_bias="0.088" />

        <CheckBox
            android:id="@+id/ckb_allergy_penicillin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="Penicilina"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ckb_allergy_cefalosporinas"
            app:layout_constraintTop_toBottomOf="@+id/txt_alergias"
            app:layout_constraintVertical_bias="0.096"
            android:layout_marginRight="8dp" />

        <CheckBox
            android:id="@+id/ckb_allergy_sulfonamides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="Sulfonamidas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ckb_allergy_penicillin"
            app:layout_constraintTop_toTopOf="@+id/ckb_allergy_penicillin"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/btn_profilaxia_recomendada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/botao_customizado"
            android:padding="8dp"
            android:text="Profilaxia Recomendada"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ckb_allergy_penicillin"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/home_by_anestech"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>